tests/snapshots/snapshot_test__document_view_with_content.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌ Test Document ───────────────────────────────────────────┐
│Test Document                                             │
│                                                          │
│This is test content.                                     │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
