tests/snapshots/snapshot_test__g_u_chord_opens_url_dialog.snap
---
source: tests/snapshot_test.rs
assertion_line: 1271
expression: app.url_input_text().to_string()
---

