tests/snapshots/snapshot_test__help_dialog_visible.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
                                                                                
                                                                                
                                                                                
                                                                                
            ┌ Keyboard Shortcuts — Task List  (1/3) ───────────────┐            
            │                                                      │            
            │ Task List                                            │            
            │   a             - Toggle Assigned to Me filter       │            
            │   n             - Create new task                    │            
            │   s             - Open status picker                 │            
            │   d             - Delete selected task               │            
            │                                                      │            
            │                                                      │            
            │                                                      │            
            │                                                      │            
            │                                                      │            
            │                                                      │            
            │ ◄ ►  1/3  │  j/k: Pages  │  Esc: Close               │            
            │                                                      │            
            └──────────────────────────────────────────────────────┘
