tests/snapshots/snapshot_test__inbox_view_empty.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌Inbox─────────────────────────────────────────────────────┐
│📬  Inbox is empty - All caught up!                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
