tests/snapshots/snapshot_test__inbox_view_with_activities.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌Inbox─────────────────────────────────────────────────────┐
│▶ 📋  Task assigned to you - You were assigned to 'Review p│
│  💬  Comment on task - New comment on 'Deploy to productio│
│  🔄  Status change (Jan 03, 2024 00:00)                   │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
