tests/snapshots/snapshot_test__inbox_view_with_selection.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌Inbox─────────────────────────────────────────────────────┐
│  [1] Task assigned to you - You were assigned to 'Review │
│▶ [2] Comment on task - New comment on 'Deploy to producti│
│  [3] Status change (Jan 03, 2024 08:00)                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
