tests/snapshots/snapshot_test__layout_80x24.snap
---
source: tests/snapshot_test.rs
expression: "format!(\"Title area: {}x{}\\nContent area: {}x{}\\nStatus area: {}x{}\\nToo small: {}\",\nlayout.title_area.width, layout.title_area.height, layout.content_area.width,\nlayout.content_area.height, layout.status_area.width,\nlayout.status_area.height, layout.too_small)"
---
Title area: 80x1
Content area: 80x20
Status area: 80x3
Too small: false
