tests/snapshots/snapshot_test__main_layout_sidebar_expanded.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌ Navigation ──────────────────────────────────────────────────────────────────┐
│👤  Assigned to Me                                                             │
│📬  Inbox                                                                      │
│WS Engineering                                                                │
│SP Backend                                                                    │
│FL API                                                                        │
│LI Sprint Tasks                                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
